--- a/AoC2018/AoC2018/AoC2018.csproj
+++ b/AoC2018/AoC2018/AoC2018.csproj
@@ -68,6 +68,8 @@
   <ItemGroup>
     <Compile Include="Days\Day1.cs" />
     <Compile Include="Days\Day2.cs" />
+    <Compile Include="Days\Framework.cs" />
+    <Compile Include="Days\Day3.cs" />
     <Compile Include="Helpers\ArraysAndLists.cs" />
     <Compile Include="Helpers\StringsAndInts.cs" />
     <Compile Include="Program.cs" />
