--- a/AoC2018/AoC2018/AoC2018.csproj
+++ b/AoC2018/AoC2018/AoC2018.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Days\Day1.cs" />
     <Compile Include="Days\Day2.cs" />
     <Compile Include="Days\Day4.cs" />
-    <Compile Include="Days\Framework.cs" />
+    <None Include="Days\Framework.cs" />
     <Compile Include="Days\Day3.cs" />
     <Compile Include="Helpers\ArraysAndLists.cs" />
     <Compile Include="Helpers\General.cs" />
