--- a/AoC2018/AoC2018/AoC2018.csproj
+++ b/AoC2018/AoC2018/AoC2018.csproj
@@ -69,8 +69,9 @@
     <Compile Include="Days\Day1.cs" />
     <Compile Include="Days\Day2.cs" />
     <Compile Include="Days\Day4.cs" />
-    <None Include="Days\Framework.cs" />
+    <Compile Include="Days\Framework.cs" />
     <Compile Include="Days\Day3.cs" />
+    <Compile Include="Days\Day5.cs" />
     <Compile Include="Helpers\ArraysAndLists.cs" />
     <Compile Include="Helpers\General.cs" />
     <Compile Include="Helpers\StringsAndInts.cs" />
@@ -82,7 +83,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Input\Day5_RealData.txt" />
     <Content Include="Input\Day4_RealData.txt" />
+    <Content Include="Input\Day5_TestData.txt" />
     <Content Include="Input\Day4_TestData.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
