--- a/AoC2019/AoC2019/AoC2019.csproj
+++ b/AoC2019/AoC2019/AoC2019.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Days\Day1.cs" />
     <Compile Include="Days\Day2.cs" />
+    <Compile Include="Days\Day3.cs" />
     <Compile Include="Days\Framework.cs" />
     <Compile Include="Helpers\ArraysAndLists.cs" />
     <Compile Include="Helpers\General.cs" />
