--- a/AoC2020/AoC2020/AoC2020.csproj
+++ b/AoC2020/AoC2020/AoC2020.csproj
@@ -80,7 +80,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Input\**">
+    <Content Include="Input\Day1_RealData.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Input\Day1_TestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
