--- a/AoC2020/AoC2020/AoC2020.csproj
+++ b/AoC2020/AoC2020/AoC2020.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Days\Day2.cs" />
     <Compile Include="Days\Day3.cs" />
     <Compile Include="Days\Framework.cs" />
+    <Compile Include="Days\IDays.cs" />
     <Compile Include="Helpers\ArraysAndLists.cs" />
     <Compile Include="Helpers\General.cs" />
     <Compile Include="Helpers\StringsAndInts.cs" />
