--- a/AoC2020/AoC2020/AoC2020.csproj
+++ b/AoC2020/AoC2020/AoC2020.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="EasyConsoleCore" Version="1.0.2" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="TextCopy" Version="4.2.0" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Input\**">
