--- a/AoC2020/AoC2020/AoC2020.csproj
+++ b/AoC2020/AoC2020/AoC2020.csproj
@@ -25,6 +25,8 @@
     <None Remove="Input\Day4_RealData.txt" />
     <None Remove="Input\Day4_TestData.txt" />
     <None Remove="Input\Day4_TestData2.txt" />
+    <None Remove="Input\Day5_RealData.txt" />
+    <None Remove="Input\Day5_TestData.txt" />
     <Content Include="Input\Day1_TestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
