--- a/AoC2020/AoC2020/AoC2020.csproj
+++ b/AoC2020/AoC2020/AoC2020.csproj
@@ -31,6 +31,7 @@
     <None Remove="Input\Day6_TestData.txt" />
     <None Remove="Input\Day7_RealData.txt" />
     <None Remove="Input\Day7_TestData.txt" />
+    <None Remove="Input\Day7_TestData2.txt" />
     <Content Include="Input\Day1_TestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
