--- a/AoC2020/AoC2020/AoC2020.csproj
+++ b/AoC2020/AoC2020/AoC2020.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="EasyConsoleCore" Version="1.0.2" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="TextCopy" Version="4.2.0" />
   </ItemGroup>
@@ -32,6 +33,8 @@
     <None Remove="Input\Day7_RealData.txt" />
     <None Remove="Input\Day7_TestData.txt" />
     <None Remove="Input\Day7_TestData2.txt" />
+    <None Remove="Input\Day8_RealData.txt" />
+    <None Remove="Input\Day8_TestData.txt" />
     <Content Include="Input\Day1_TestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
