--- a/AoC2022/AoC/AoC.csproj
+++ b/AoC2022/AoC/AoC.csproj
@@ -23,6 +23,8 @@
     <Content Include="Input\**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Remove="Input\Day2_RealData.txt" />
+    <None Remove="Input\Day2_TestData.txt" />
     <Content Include="Input\Day1_TestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
