--- a/AoC2022/AoC/AoC.csproj
+++ b/AoC2022/AoC/AoC.csproj
@@ -27,6 +27,8 @@
     <None Remove="Input\Day2_TestData.txt" />
     <None Remove="Input\Day3_RealData.txt" />
     <None Remove="Input\Day3_TestData.txt" />
+    <None Remove="Input\Day4_RealData.txt" />
+    <None Remove="Input\Day4_TestData.txt" />
     <Content Include="Input\Day1_TestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
