--- a/AoC2022/AoC/AoC.csproj
+++ b/AoC2022/AoC/AoC.csproj
@@ -29,6 +29,8 @@
     <None Remove="Input\Day3_TestData.txt" />
     <None Remove="Input\Day4_RealData.txt" />
     <None Remove="Input\Day4_TestData.txt" />
+    <None Remove="Input\Day5_RealData.txt" />
+    <None Remove="Input\Day5_TestData.txt" />
     <Content Include="Input\Day1_TestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
