--- a/AoC2022/AoC/AoC.csproj
+++ b/AoC2022/AoC/AoC.csproj
@@ -33,6 +33,8 @@
     <None Remove="Input\Day5_TestData.txt" />
     <None Remove="Input\Day6_RealData.txt" />
     <None Remove="Input\Day6_TestData.txt" />
+    <None Remove="Input\Day7_RealData.txt" />
+    <None Remove="Input\Day7_TestData.txt" />
     <Content Include="Input\Day1_TestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
